Issue #2712391 by huzooka: refs #40 – Fixes sticky table: keep cell sizes and sort indicators up-to-date. Updates counter: shows selected, visible and total counters as well.

--- a/css/gc_style.css
+++ b/css/gc_style.css
@@ -77,18 +77,19 @@
  ******************************************************************************/
 
 .tablesorter-header {
-  background-image: url("../images/bg.gif");
+  padding-right: 20px;
+  background-image: url(../images/bg.gif);
   background-position: right center;
   background-repeat: no-repeat;
   cursor: pointer;
 }
 
 .tablesorter-header.sort-up {
-  background-image: url("../images/desc.gif");
+  background-image: url(../images/desc.gif);
 }
 
 .tablesorter-header.sort-down {
-  background-image: url("../images/asc.gif");
+  background-image: url(../images/asc.gif);
 }
 
 /**
@@ -96,6 +97,7 @@
  * That's why we have to remove styling this ugly way.
  */
 .tablesorter-header.sorter-false {
+  padding-right: 10px;
   background-image: none;
   cursor: auto;
 }
